--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 	<h2>Soy Gabriela Rodriguez Escobar</h2>
+	<p>estudie  en por     un      mañana </p>
+	<img src="http://static1.squarespace.com/static/556f1493e4b0c15f9e39aa8a/t/5b99644df950b779d5560bac/1541605641637/?format=1500w" alt="">
 </body>
 </html>
