--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h2>Soy Gabriela Rodriguez Escobar</h2>
 	<p>estudie  en por     un      mañana </p>
 	<img src="http://static1.squarespace.com/static/556f1493e4b0c15f9e39aa8a/t/5b99644df950b779d5560bac/1541605641637/?format=1500w" alt="">
+	<h3><a href="words.html">words this week</a></h3>
 </body>
 </html>
