--- a/words.html
+++ b/words.html
@@ -6,23 +6,17 @@
 </head>
 <body>
 
-	<h1>palabra en ingles</h1>
-	<h2>que signica</h2>
-	<img src="" alt="">
 
-	<h1>kitchen </h1>
+	<h1 style="color:red">kitchen </h1>
 	<h2>cocina </h2>
 	<img src="" alt="">
 	
-    <h1> Living   room  </h1>
+    <h1 style="color:blue"> Living   room  </h1>
     <h2>sala</h2>   
     <img src="" alt="">
 
-    <h1> Living  room </h2>  
-    <h2>sala</h2>
-    <img src="" alt="">
    
-    <h1>bedroom</h1>
+    <h1 style="color:yellow">bedroom</h1>
     <h2>cuarto</h2>    
      <img src="" alt="">
     
